// Basics
syntax = "proto3";
package worker;

// Services
service WorkerService {
    rpc Create (CreateReq) returns (DefaultRes);
    rpc DeleteById (DeleteByIdReq) returns (DeleteByIdRes);
    rpc GetByCardId (GetByCardIdReq) returns (DefaultRes);
    rpc GetById (GetByIdReq) returns (DefaultRes);
    rpc UpdateById (UpdateByIdReq) returns (DefaultRes);
    
}

// Messages
message Worker {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string cardId = 5;
}

message DefaultRes {
    Worker data = 1;
}

// Create
message CreateReq {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string cardId = 4;
}

// GetById
message GetByIdReq {
    string id = 1;
}

// GetByCardId
message GetByCardIdReq {
    string cardId = 1;
}

// UpdateById
message UpdateByIdReq {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string cardId = 5;
}

// DeleteById
message DeleteByIdReq {
    string id = 1;
}

message DeleteByIdRes {
    string status = 1;
}
